Only show current plate. Validate only show plates with 3 characters or more.

--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -61,11 +61,10 @@
                                                         <div id="resultOfCameraScan">
                                                             <% if(readingQueue?.length > 0) { %>
                                                             <% for(car of readingQueue) { %>
-                                                            <a id="plate-<%= car.plate%>" class="btn btn-link"
+                                                            <a id="plate-<%= car.plate%>" class="btn btn-link mb-1"
                                                                 onclick="setPlateValue('<%= car.plate%>')">
                                                                 <b><%= car.plate%></b>
                                                             </a>
-                                                            <br>
                                                             <% } %>
                                                             <% } %>
                                                         </div>
@@ -185,8 +184,8 @@
             if (data.plate) {
                 console.log(JSON.stringify(data));
                 document.querySelector('#resultOfCameraScanLoading').innerHTML = '';
-                document.querySelector('#resultOfCameraScan').innerHTML += (`
-                    <a id="plate-${data.plate}" class="btn btn-link" onclick="setPlateValue('${data.plate}')"><b>${data.plate}</b></a>` + '<br>')
+                document.querySelector('#resultOfCameraScan').innerHTML = (`
+                    <a id="plate-${data.plate}" class="btn btn-link mb-1" onclick="setPlateValue('${data.plate}')"><b>${data.plate}</b></a>` + '<br>')
             }
         })
 
