Fix clear display

--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -52,7 +52,7 @@
                                                 <div class="col-lg-4 p-3">
                                                     <div class="card p-3">
                                                         <div
-                                                            class="d-sm-flex justify-content-between align-items-start">
+                                                            class="d-flex d-sm-flex justify-content-between align-items-start">
                                                             <h5><%= lingua.membership.readyByCamera%>:</h5>
 
                                                             <button id="clearQueueBtn"
