--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -71,8 +71,8 @@
 
                                 <div class="mt-3">
                                     <a href="/create-account"
-                                        class="btn btn-block btn-success btn-lg font-weight-medium auth-form-btn w-100 tex-white"
-                                        type="submit"> <%= lingua.create %></a>
+                                        class="btn btn-block btn-success btn-lg font-weight-medium auth-form-btn w-100 tex-white">
+                                        <%= lingua.create %></a>
                                 </div>
                                 <div class="my-2 d-flex justify-content-between align-items-center">
                                     <a href="/resetPasswordRequest"
