--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -99,7 +99,7 @@
 
                                             <input type="text" id="firstName" name="firstName"
                                                 class="form-control mb-3 form-control-lg"
-                                                placeholder="<%= lingua.user.firstName%>" required autofocus />
+                                                placeholder="<%= lingua.user.firstName%>" required />
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -109,7 +109,7 @@
 
                                             <input type="text" id="lastName" name="lastName"
                                                 class="form-control mb-3 form-control-lg"
-                                                placeholder="<%= lingua.user.lastName%>" required autofocus />
+                                                placeholder="<%= lingua.user.lastName%>" required />
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -119,7 +119,7 @@
 
                                             <input type="tel" id="phoneNumber" name="phoneNumber"
                                                 class="form-control mb-3 form-control-lg" placeholder="XXX-XXX-XXXX"
-                                                required autofocus />
+                                                required />
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -129,7 +129,7 @@
 
                                             <input type="text" id="dateOfBirth" onfocus="(this.type='date')"
                                                 name="dateOfBirth" placeholder="mm/dd/yyyy"
-                                                class="form-control mb-3 form-control-lg" required autofocus />
+                                                class="form-control mb-3 form-control-lg" required />
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
