--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -47,39 +47,30 @@
                                                         <%= lingua.membership.validate%></h4>
                                                 </div>
                                             </div>
-                                            <br>
+
                                             <div class="row">
-                                                <div class="col-lg-4 p-3">
-                                                    <div class="card p-3">
-                                                        <div
-                                                            class="d-flex d-sm-flex justify-content-between align-items-start">
-                                                            <h5><%= lingua.membership.readyByCamera%>:</h5>
+                                                <div class="col-sm-5 col-md-6 col-lg-4 p-3">
+                                                    <div class="row">
+                                                        <div class="col-sm-12 col-md-12">
+                                                            <div class="card p-3">
+                                                                <div
+                                                                    class="d-flex d-sm-flex justify-content-between align-items-start">
+                                                                    <h5><%= lingua.membership.readyByCamera%>:</h5>
 
-                                                            <button id="clearQueueBtn"
-                                                                class="btn btn-sm btn-outline-dark p-2 br-5"><%= lingua.clear%></button>
-                                                        </div>
-                                                        <div id="resultOfCameraScan">
-                                                            <% if(readingQueue?.length > 0) { %>
-                                                            <% for(car of readingQueue) { %>
-                                                            <a id="plate-<%= car.plate%>" class="btn btn-link mb-1"
-                                                                onclick="setPlateValue('<%= car.plate%>')">
-                                                                <b><%= car.plate%></b>
-                                                            </a>
-                                                            <% } %>
-                                                            <% } %>
-                                                        </div>
-                                                        <div style="height: 10px !important"
-                                                            id="resultOfCameraScanLoading">
+                                                                    <button id="clearCameraResults"
+                                                                        class="btn btn-sm btn-outline-dark p-2 br-5"><%= lingua.clear%></button>
+                                                                </div>
+                                                                <div id="resultOfCameraScan">
+                                                                </div>
+                                                                <div style="height: 10px !important"
+                                                                    id="resultOfCameraScanLoading">
+                                                                </div>
+                                                                <hr>
+                                                                <h5><%= lingua.membership.manualInput%>:</h5>
 
-                                                        </div>
-                                                    </div>
-                                                    <br>
-                                                    <div class="card p-3">
-                                                        <h5><%= lingua.membership.manualInput%>:</h5>
-
-                                                        <form id="form-validate-membership" class="pt-3" method="post">
-                                                            <div class="row">
-                                                                <div class="col-lg-12">
+                                                                <form id="form-validate-membership" class="pt-3"
+                                                                    method="post">
+                                                               
                                                                     <div class="form-group">
                                                                         <label class="required" for="name">
                                                                             <%= lingua.car.plateNumber%></label>
@@ -88,23 +79,21 @@
                                                                             id="plateNumber" name="plateNumber"
                                                                             class="form-control form-control-lg text-uppercase"
                                                                             required />
-
+                                                                       
+                                                                        <div class="mt-3 mb-3">
+                                                                            <input type="hidden" id="inputType"
+                                                                                name="inputType" value="User" />
+                                                                            <button id="validateMembershipBtn"
+                                                                                class="btn btn-block btn-inverse-dark btn-lg font-weight-medium auth-form-btn float-end"
+                                                                                type="submit"><%= lingua.validate%></button>
+                                                                        </div>
                                                                     </div>
-                                                                </div>
-                                                                <!-- </div>
-                                                                <div class="row"> -->
-                                                                <div class="mt-3 mb-3">
-                                                                    <input type="hidden" id="inputType" name="inputType"
-                                                                        value="User" />
-                                                                    <button id="validateMembershipBtn"
-                                                                        class="btn btn-block btn-inverse-dark btn-lg font-weight-medium auth-form-btn float-end"
-                                                                        type="submit"><%= lingua.validate%></button>
-                                                                </div>
+                                                                </form>
                                                             </div>
-                                                        </form>
+                                                        </div>
                                                     </div>
                                                 </div>
-                                                <div class="col-lg-8 p-3">
+                                                <div class="col-sm-7 col-md-6 col-lg-8 p-3">
                                                     <!-- Render results in membershipDetails div -->
                                                     <div class="membershipDetails" id="membershipDetails"></div>
                                                 </div>
@@ -234,22 +223,29 @@
             }
         });
 
-        $("#clearQueueBtn").on("click", function (event) {
+        $("#clearCameraResults").on("click", function (event) {
             event.preventDefault();
             event.stopPropagation();
-
-            $.ajax({
-                url: "/clearQueue",
-                type: "POST",
-                contentType: "application/json",
-                data: {},
-            }).done(function (result) {
-                document.querySelector('#resultOfCameraScan').innerHTML = ('')
-            }).fail(function (err) {
-                console.log(err);
-            })
-
+            showResult('#resultOfCameraScan', '');
         });
+
+        // Not used.
+        // $("#clearQueueBtn").on("click", function (event) {
+        //     event.preventDefault();
+        //     event.stopPropagation();
+
+        //     $.ajax({
+        //         url: "/clearQueue",
+        //         type: "POST",
+        //         contentType: "application/json",
+        //         data: {},
+        //     }).done(function (result) {
+        //         document.querySelector('#resultOfCameraScan').innerHTML = ('')
+        //     }).fail(function (err) {
+        //         console.log(err);
+        //     })
+
+        // });
 
         var showResult = function (updateDiv, result) {
             $(updateDiv).html(result);
