--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
                             </a>
                         </div>
                     </li>
-                    <li class="nav-item dropdown d-none d-lg-block user-dropdown">
+                    <li class="nav-item dropdown d-lg-block user-dropdown">
                         <% if(user) { %>
                         <a class="nav-link" id="UserDropdown" href="/account" aria-expanded="false">
                             <!-- <img class="img-xs rounded-circle" src="../../images/faces/profile/user.png"
