Add padding to dashboard btn. Optimize layouts and buttons.

--- a/views/ajaxSnippets/validationResult.ejs
+++ b/views/ajaxSnippets/validationResult.ejs
@@ -4,7 +4,7 @@
             <div class="row">
                 <% if(customer && car) { %>
                 <div class="col-md-6 p-3">
-                    <div class="d-sm-flex justify-content-between align-items-start">
+                    <div class="d-flex justify-content-between align-items-start">
                         <div>
                             <h4><%= lingua.user.info%></h4>
                         </div>
