--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -47,7 +47,7 @@
                                 <div class="col-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <div class="d-sm-flex justify-content-between align-items-start">
+                                            <div class="d-flex justify-content-between align-items-start">
                                                 <div>
                                                     <h4 class="card-title card-title-dash"><%= lingua.car.cars%></h4>
                                                 </div>
