--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -44,15 +44,16 @@
                                 <div class="col-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <div class="d-sm-flex justify-content-between align-items-start">
+                                            <div class="d-flex justify-content-between align-items-start">
                                                 <div>
                                                     <h4 class="card-title card-title-dash"><%= lingua.user.users%></h4>
                                                 </div>
                                                 <% if([roles.ADMIN].includes(user.role)) { %>
                                                 <div>
                                                     <a href="/create-user" class="btn btn-primary btn-icon-text"
-                                                        type="button"><i
-                                                            class="mdi mdi-map-marker-plus btn-icon-prepend"></i><%= lingua.user.add%></a>
+                                                        type="button">
+                                                        <i class="fas fa-plus btn-icon-prepend btn-icon-prepend"></i>
+                                                        <%= lingua.user.add%></a>
                                                 </div>
                                                 <% } %>
 
