--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -44,7 +44,7 @@
                                 <div class="col-sm-12 col-md-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <div class="d-sm-flex justify-content-between align-items-start">
+                                            <div class="d-flex justify-content-between align-items-start">
                                                 <div>
                                                     <h4 class="card-title card-title-dash">
                                                         <% if(isMyProfile) { %>
@@ -53,7 +53,7 @@
                                                         <%= lingua.user.view%>
                                                         <% } %></h4>
                                                 </div>
-                                                <div class="d-sm-flex justify-content-between align-items-start">
+                                                <div class="d-flex justify-content-between align-items-start">
                                                     <a href="/changePassword/<%- customer.id%>?url=/customers"
                                                         type="button" class="btn btn-primary btn-icon-text m-1">
                                                         <i class="fa-solid fa-key"></i>
