Add margin to validate btn. Change terms and conditions.

--- a/views/termsAndConditions.ejs
+++ b/views/termsAndConditions.ejs
@@ -103,7 +103,7 @@
                                         de
                                         otra manera.
                                         <br><br>
-                                        La membresía puede ser cancelada en cualquier momento. Las cancelaciones
+                                        <!-- La membresía puede ser cancelada en cualquier momento. Las cancelaciones
                                         deben realizarse en línea al menos cinco (5) días antes de la finalización de la
                                         membresía de 30 días vigente en ese momento. Si no cancela la membresía a
                                         tiempo dentro de los primeros 25 días de la suscripción del servicio, el aviso
@@ -111,7 +111,20 @@
                                         cancelación entrará en vigencia al final del mes siguiente y se le cobrará ese
                                         mes.
                                         Para cancelar su membresía, visite nuestro sitio web <a target="_blank"
-                                            href="https://www.mrquickspr.com/">www.mrquickspr.com</a>
+                                            href="https://www.mrquickspr.com/">www.mrquickspr.com</a> -->
+
+                                        La membresía puede ser cancelada en cualquier momento. Las cancelaciones deben
+                                        realizarse en línea al menos cinco (5) días antes de la finalización de la
+                                        membresía de 30 días vigente en ese momento. Si no cancela la membresía a tiempo
+                                        dentro de los primeros 25 días de la suscripción del servicio, el aviso de
+                                        cancelación entrará en vigencia al final del mes siguiente y se le cobrará ese
+                                        mes. Si un Miembro decide degradar una membresía antes de finalizar el período
+                                        de 30 días, dicho cambio entrará en vigencia de inmediato. No se proporcionarán
+                                        reembolsos en este evento. Si un Miembro decide ascender su membresía dentro del
+                                        período de 30 días, la actualización entrará en vigencia de inmediato. La
+                                        diferencia de precio será prorrateada y cobrada por el período restante de 30
+                                        días. Para cancelar o modificar su membresía, visite nuestro sitio web
+                                        <a target="_blank" href="https://www.mrquickspr.com/">www.mrquickspr.com</a>
                                         <br><br>
                                         Autocare LLC DBA Mr. Quick’s se reserva el derecho de cancelar, modificar o
                                         cambiar el programa y/o los precios si lo considera necesario y puede cancelar
@@ -180,13 +193,26 @@
                                         described in your agreement with the credit card issuer or otherwise.
                                         <br>
                                         <br>
-                                        Membership may be canceled at any time. Cancellations must be made online at
+                                        <!-- Membership may be canceled at any time. Cancellations must be made online at
                                         least five (5) days prior to the conclusion of the then running 30-day
                                         membership.
                                         If you fail to timely cancel the membership within the first 25 days of service
                                         subscription, the cancellation notice will become effective at the end of the
                                         following month, and you will be charged for that month.  To cancel your
                                         membership, visit our website <a target="_blank"
+                                            href="https://www.mrquickspr.com/">www.mrquickspr.com</a> -->
+
+                                        Membership may be canceled at any time. Cancellations must be made online at
+                                        least five (5) days prior to the conclusion of the then running 30-day
+                                        membership. If you fail to timely cancel the membership within the first 25 days
+                                        of service subscription, the cancellation notice will become effective at the
+                                        end of the following month, and you will be charged for that month. If a Member
+                                        decides to downgrade a membership prior to the 30-day end period, such change
+                                        will become effective immediately. No refunds will be provided in this event. If
+                                        a Member decides to upgrade a membership within the 30-day period, the upgrade
+                                        will become effective immediately. The price difference will be prorated and
+                                        charged for the remainder 30-day period. To cancel or change your membership,
+                                        visit our website <a target="_blank"
                                             href="https://www.mrquickspr.com/">www.mrquickspr.com</a>
                                         <br>
                                         <br>
