--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -177,7 +177,7 @@
                 if (!exist) {
                     console.log('New Plate to show')
                     document.querySelector('#resultOfCameraScan').innerHTML = (`
-                    <a id="plate-${data.plate}" class="btn btn-icon-md btn-outline-behance" onclick="setPlateValue('${data.plate}')"><b>${data.plate}</b></a>` + '<br>')
+                    <a id="plate-${data.plate}" class="btn btn-icon-md btn-outline-behance m-4" onclick="setPlateValue('${data.plate}')"><b>${data.plate}</b></a>` + '<br>')
                 }
             }
         })
