--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -169,12 +169,12 @@
         // Receive data
         socket.on('read-plates', (data) => {
             if (data.plate) {
-                console.debug('New Plate: ' + data.plate)
+                // console.debug('New Plate: ' + data.plate)
                 // console.debug(JSON.stringify(data));
                 document.querySelector('#resultOfCameraScanLoading').innerHTML = '';
                 let exist = document.getElementById(`plate-${data.plate}`) !== null;
                 if (!exist) {
-                    console.debug('New Plate to show')
+                    console.log('New Plate: ' + data.plate)
                     document.querySelector('#resultOfCameraScan').innerHTML = (`
                     <a id="plate-${data.plate}" class="btn btn-icon-md btn-outline-behance m-4" onclick="setPlateValue('${data.plate}')"><b>${data.plate}</b></a>` + '<br>')
                 }
