--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -7,6 +7,9 @@
             <%= lingua.membership.memberships%>
             <% } %>
         </h4>
+        <% if(customer?.balance) { %>
+        <h6>Balance: <%= customer?.balance%></h6>
+        <% } %>
     </div>
     <div class="d-sm-flex justify-content-between align-items-start">
         <% if(showManageBtn) { %>
