Remove set the service qty to car function. Optimize structure to show services and utilization % per car. Add updateCars Function. Handle invoice.payment_succeeded webhook. Remove unused code and functions.

--- a/views/cars/view.ejs
+++ b/views/cars/view.ejs
@@ -95,7 +95,13 @@
                                                         <tr>
                                                             <td><%= lingua.service.qty%></td>
                                                             <td>
-                                                                <%- car.services.length%>
+                                                                <%- car.utilization.services%>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td>Utilization</td>
+                                                            <td>
+                                                                <%- (car.utilization.percentage * 100).toFixed(1)%>%
                                                             </td>
                                                         </tr>
                                                     </tbody>
