Add missing parentesis.

--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -37,7 +37,7 @@
                 <th>
                     <%= lingua.membership.period%>
                     <br>
-                    <small>( <%= lingua.membership.startDate%>) / <%= lingua.membership.endDate%></small>
+                    <small>(<%= lingua.membership.startDate%>) / (<%= lingua.membership.endDate%>)</small>
 
                 </th>
                 <th class="text-center">
