--- a/views/cars/view.ejs
+++ b/views/cars/view.ejs
@@ -115,8 +115,8 @@
                                                                 </ul>
                                                             </td>
                                                         </tr>
-                                                        
-                                                        <% if(utilization.length > 0) { %>
+
+                                                        <% if(utilization?.length > 0) { %>
                                                         <tr>
                                                             <td> <%= lingua.utilizationHistory%></td>
                                                             <td>
