--- a/views/dashboards/validateMembership.ejs
+++ b/views/dashboards/validateMembership.ejs
@@ -173,7 +173,7 @@
                 document.querySelector('#resultOfCameraScanLoading').innerHTML = '';
                 let exist = document.getElementById(`plate-${data.plate}`) !== null;
                 if (!exist) {
-                    console.log('New Plate: ' + data.plate)
+                    // console.log('New Plate: ' + data.plate)
                     document.querySelector('#resultOfCameraScan').innerHTML = (`
                     <a id="plate-${data.plate}" class="btn btn-icon-md btn-outline-behance m-4" onclick="automaticValidation('${data.plate}')"><b>${data.plate}</b></a>` + '<br>')
                     automaticValidation(data.plate);
