--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -185,7 +185,7 @@
                                 <div class="col-md-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <%- include('../partials/subscriptions/information.ejs' , {invalid: false, subscriptions, showManageBtn : true, customer : customer, showCreateBtn: false}); %>
+                                            <%- include('../partials/subscriptions/information.ejs' , {invalid: false, subscriptions, showManageBtn : true, customer : customer, showCreateBtn: false, user : user}); %>
                                         </div>
                                     </div>
                                 </div>
