--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -150,6 +150,14 @@
                     <span style="text-transform: uppercase;">
                         <%- stripeSubscription?.data.status%>
                     </span>
+                    <% if([roles.ADMIN].includes(user.role)) { %>
+                    <br>
+                    <button id="sync-btn-<%- stripeSubscription.id%>" value="<%- stripeSubscription.id%>"
+                        class="sync-btn btn btn-primary btn-icon-text text-white p-1 m-1">
+                        <i class="fa-solid fa-rotate"></i> Sync with Stripe
+                    </button>
+                    <div id="sync-update-<%- stripeSubscription.id%>"></div>
+                    <% } %>
                 </td>
             </tr>
             <% } %>
@@ -158,6 +166,49 @@
 </div>
 
 <script>
+
+    const syncBtn = $('.sync-btn');
+    syncBtn.click(function (event) {
+        syncBtn.prop('disabled', true);
+        event.preventDefault();
+        event.stopPropagation();
+
+        const value = $(this).attr("value");
+
+        $.ajax({
+            url: "/syncSubscription",
+            type: "POST",
+            contentType: "application/json",
+            data: JSON.stringify({
+                value: value
+            }),
+            beforeSend: function () {
+                showResult(`#sync-update-${value}`,
+                    `<div class="spinner text-center p-1 m-1">
+                            <div class="spinner-grow" style="width: 2rem; height: 2rem"></div>
+                    </div>`
+                );
+            }
+        }).done(function (result) {
+            showResult(`#sync-update-${value}`, result);
+            var delayInMilliseconds = 3000; //1 second
+
+            setTimeout(function () {
+                showResult(`#sync-update-${value}`, '');
+                // syncBtn.prop('disabled', false);
+                location.reload();
+
+            }, delayInMilliseconds);
+
+        }).fail(function (err) {
+            console.log(err);
+        })
+
+    })
+
+    var showResult = function (updateDiv, result) {
+        $(updateDiv).html(result);
+    }
 
     function validateCheckboxes(itemid) {
         var selected = [];
