--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -56,7 +56,8 @@
                                 <%= lingua.createAccount%>
                             </h4>
                             <!-- <h6 class="fw-light">Sign in to continue.</h6> -->
-                            <form id="form-register" class="pt-3" action="/register" method="post">
+                            <form id="form-register" class="pt-3" action="/register" method="post"
+                                onsubmit="disableSubmitBtn()">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
@@ -149,7 +150,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="mt-3">
-                                        <button
+                                        <button id="submit-btn"
                                             class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn float-end"
                                             type="submit"><%= lingua.create%></button>
                                     </div>
@@ -190,6 +191,10 @@
     <!-- End custom js for this page-->
     <script>
         jQuery(document).ready(function () { jQuery("#phoneNumber").mask("999-999-9999"); });
+
+        function disableSubmitBtn() {
+            $('#submit-btn').prop('disabled', true);
+        };
     </script>
 </body>
 
